# bitcoin_cmake

./: .gitignore  BUILD.md  CMakeLists.txt  FIXES.md  Makefile.unix  README_FIXES.md  build.bat  build.sh  test_array_mkdir  test_array_mkdir.cpp  test_base58_compile.cpp  test_bignum  test_bignum.cpp  test_bignum_addressof  test_bignum_addressof.cpp  test_bignum_real.cpp  test_compat.cpp  test_compatibility  test_compatibility.cpp  test_fix  test_fix.cpp  test_headers  test_headers.cpp  test_heapchk  test_heapchk.cpp  test_min_max  test_min_max.cpp  test_narrowing  test_narrowing.cpp  test_thread_perf  test_thread_perf.cpp  test_util  test_util.cpp
cmake/: FindBerkeleyDB.cmake
src/: bignum.h  compat.h  db.cpp  headers.h  main.cpp  main.h  net.cpp  net.h  serialize.h  sha.h  stubs.cpp  util.cpp  util.h
